# betlang

./: .editorconfig  .gitignore  .governance-allowlist  .guix-channel  .hypatia-ignore  0-AI-MANIFEST.a2ml  ANCHOR.scope-arrest.2026-01-01.Jewell.scm  AUTHORITY_STACK.mustfile-nickel.scm  CHANGELOG.adoc  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  Cargo.toml  ECOSYSTEM.scm  EXPLAINME.adoc  Justfile  MAINTAINERS.md  META.scm  PROOF-NEEDS.md  PROOF-STATUS.md  README.adoc  README.md  ROADMAP.adoc  RSR_COMPLIANCE.adoc  RUST-STATUS.md  SAFETY-FEATURES.md  SECURITY.md  SESSION-SUMMARY-2026-02-07.md  SPEC.core.scm  SPEC.core.scm.orig  STATE.scm  TOOLING.md  TPCF.md  betlang-tests.ipkg  codemeta.json  guix.scm  info.rkt  lakefile.lean  opsm.toml  (+1 more)
.claude/: CLAUDE.md  PROJECT.md
.clusterfuzzlite/: Dockerfile  project.yaml
.github/workflows/: cargo-audit.yml  casket-pages.yml  cflite_batch.yml  cflite_pr.yml  codeql.yml  comprehensive-quality.yml  hypatia-scan.yml  jekyll-gh-pages.yml  proofs.yml  release.yml  scorecard-enforcer.yml  secret-scanner.yml  spark-theatre-gate.yml  test.yml  workflow-linter.yml
.machine_readable/: ECOSYSTEM.scm  META.scm  PLAYBOOK.scm  SPEC.core.a2ml  STATE.scm
.machine_readable/6a2/: AGENTIC.a2ml  ECOSYSTEM.a2ml  META.a2ml  NEUROSYM.a2ml  STATE.a2ml
.machine_readable/contractiles/: Justfile
.machine_readable/svc/: README.adoc
.well-known/: ai.txt  dc.xml  humans.txt  security.txt
bench/: bench_lexer.rs  bench_parser.rs
benchmarks/: performance.rkt
bindings/chapel/: Cargo.toml  build.rs
bindings/chapel/examples/: basic.chpl
bindings/chapel/include/: betlang.h
bindings/chapel/src/: lib.rs
bindings/julia/: Cargo.toml  Project.toml
bindings/julia/src/: Betlang.jl  lib.rs
compiler/bet-check/: Cargo.toml
compiler/bet-check/src/: lib.rs
compiler/bet-codegen/: Cargo.toml
compiler/bet-core/: Cargo.toml
compiler/bet-eval/: Cargo.toml
compiler/bet-eval/src/: lib.rs
compiler/bet-parse/: Cargo.toml  build.rs
compiler/bet-parse/fuzz/: Cargo.toml
compiler/bet-parse/fuzz/fuzz_targets/: fuzz_lexer.rs  fuzz_parser.rs
compiler/bet-parse/src/: grammar.lalrpop  lexer.rs  lib.rs  tests.rs
compiler/bet-syntax/: Cargo.toml
compiler/bet-syntax/src/: ast.rs  lib.rs  pretty.rs  span.rs  symbol.rs  visitor.rs
compiler/bet-wasm/: Cargo.toml
compiler/bet-wasm/src/: lib.rs
conformance/: README.md  deterministic.rkt  run_conformance.sh  smoke.bet  stochastic-seeded.rkt
conformance/invalid/: i01_unclosed_bet.bet  i02_missing_else.bet
conformance/valid/: v01_let.bet  v02_function.bet  v03_bet.bet  v04_sample.bet  v05_match.bet  v06_if.bet  v07_type.bet  v08_import.bet
containers/: Containerfile  Containerfile.chainguard  Containerfile.dev  build.sh
contractiles/: README.adoc
contractiles/dust/: Dustfile
contractiles/must/: Mustfile
core/: betlang.rkt  betlang.rkt.bak.20250719-182140
docs/: AFFINESCRIPT-ALIGNMENT.adoc  CITATIONS.adoc  api-reference.md  architecture.md  architecture.md.bak.20250719-182140  betlang-grammar.ebnf  echo-types.adoc  experimental-ideas.md  hyperpolymath-julia-integration.md  julia-backend-design.md  proof-debt.adoc  proof-debt.md  semantics.md  semantics.md.bak.20250719-182140  tech-debt-2026-05-26.md  tutorial.md  v3-optimization-workflow.md
docs/decisions/: 2026-06-15-L0-canonical-identity.adoc  2026-06-15-betlang-core-plan.adoc  2026-06-15-betlang-wiring-and-bet-dist-t.adoc
editors/: betlang.tmLanguage.json
editors/jetbrains/: build.gradle
editors/neovim/: README.md
editors/vscode/: README.md  deno.json  language-configuration.json  package-lock.json  package.json  rescript.json
examples/: basic-tutorial.rkt  dice.bet  finance.rkt  game-theory.rkt  monte-carlo.rkt  probabilistic-structures.rkt  safety-features.rkt
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_main.rs
homepage/: index.html  index.html.bak.20250719-182140  style.css  style.css.bak.20250719-182141
julia-backend/: Justfile  Manifest.toml  Project.toml  README.md  justfile
julia-backend/compiler/: betlang-to-julia.rkt
julia-backend/examples/: basic.jl  coin-flip-game.bet  coin-flip-game.jl  test-generated.jl  test.bet
julia-backend/src/: BetLang.jl
julia-backend/test/: runtests.jl
lib/: bayesian.rkt  combinators.rkt  cool-off.rkt  distributions.rkt  dutch-book.rkt  markov.rkt  number-systems.rkt  optimization.rkt  risk-of-ruin.rkt  sampling.rkt  statistics.rkt  ternary.rkt  ternary.rkt.bak.20250719-182140
lsp/bet-lsp/: gleam.toml  manifest.toml
packaging/scripts/: build-all.sh  release.sh
playground/: ARCHITECTURE.adoc  Justfile  Mustfile  README.adoc  config.ncl  mustfile.toml  playground-tests.ipkg
playground/examples/: 01_experiment.bet  uncertainty.ts
playground/src/: main.ts  probability.ts  ternary.ts
playground/test/: probability_test.ts  ternary_test.ts
proofs/: BetLang.lean  README.md  formal-semantics.md  mathematical-foundations.md
proofs/complexity/: computational-complexity.md
repl/: shell.rkt  shell.rkt.bak.20250719-182140
runtime/bet-rt/: Cargo.toml
runtime/bet-rt/src/: data.rs  io.rs  lib.rs  parallel.rs  random.rs  serial.rs  value.rs
runtime/bet-viz/: Cargo.toml
runtime/bet-viz/src/: lib.rs  terminal.rs
site/: index.md
spec/: README.adoc  SPEC.core.scm  grammar.ebnf  system-specs.md
tests/: basics.rkt  basics.rkt.bak.20250719-182140
tools/: analyzer.rkt  proof-scan.sh
tools/bet-cli/: Cargo.toml
tools/bet-cli/src/: main.rs  repl.rs
tools/bet-dap/: Cargo.toml
tools/bet-dap/src/: dap.rs  lib.rs  main.rs
tools/bet-lsp/: Cargo.toml
tools/bet-lsp/src/: backend.rs  document.rs  handlers.rs  lib.rs  main.rs  utils.rs
tools/bet-lsp/src/handlers/: completion.rs  definition.rs  diagnostics.rs  formatting.rs  hover.rs  symbols.rs
tools/bet-lsp/tests/: integration_test.rs
ui/: INSTALL.sh  README.adoc  deno.json  rescript.json
verification/: 0.1-AI-MANIFEST.a2ml  README.adoc  proofs
wiki/: Architecture.md  Echo-Types.md  Formal-Verification.md  Home.md  Number-Tower.md  Roadmap.md  Ternary-Semantics.md  Type-System.md
(+102 files in other folders)
