[package]
name = "bet-rt"
description = "Betlang runtime library - I/O, data structures, serialization"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Core
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }

# I/O
tokio = { workspace = true, features = ["fs", "net", "io-util", "io-std", "sync"] }

# Data structures
im.workspace = true
indexmap.workspace = true
smallvec.workspace = true

# Serialization
serde_json.workspace = true
rmp-serde = "1.1"           # MessagePack
arrow = { version = "53.0", default-features = false, features = ["ipc"] }
base64 = "0.22"             # Base64 encoding for bytes in JSON

# Randomness
rand.workspace = true
rand_distr.workspace = true
rand_chacha.workspace = true

# Parallelism
rayon.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true

# [[bench]]
# name = "data_structures"
# harness = false
