[package]
name = "bet-viz"
description = "Visualization and plotting for Betlang"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bet-rt = { path = "../bet-rt" }

# Core
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

# Plotting (pure Rust SVG generation)
plotters = { version = "0.3", default-features = false, features = ["svg_backend", "line_series", "histogram"] }

# Image output
image = { version = "0.25", default-features = false, features = ["png"] }

# Terminal plots
textplots = "0.8"

[dev-dependencies]
tempfile = "3.10"
