# SPDX-License-Identifier: PMPL-1.0-or-later
# Fuzz testing for the BetLang lexer and parser

[package]
name = "bet-parse-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
bet-parse = { path = ".." }
bet-syntax = { path = "../../bet-syntax" }
logos = "0.14"

# Prevent this from interfering with the workspace
[workspace]

[[bin]]
name = "fuzz_lexer"
path = "fuzz_targets/fuzz_lexer.rs"
test = false
doc = false

[[bin]]
name = "fuzz_parser"
path = "fuzz_targets/fuzz_parser.rs"
test = false
doc = false
